tests/NormalTests/paczka1/small_fuzzy/77322050.err
Error in line 1: smOmCjEi204 A424 79,2
Error in line 2: smOmCjEi204 A815 72,3
Error in line 11: LvqJppV58M A815 35,8
Error in line 12: LvqJppV58M A515 66,8
